# code-health-suite

./: .gitignore  DEPLOY.md  README.md  mcpize.yaml  pyproject.toml  server.json
.github/workflows/: pypi-publish.yml
src/code_health_suite/: __init__.py  __main__.py  ast_utils.py  server.py
src/code_health_suite/engines/: __init__.py  bug_detect.py  change_impact.py  clone_detect.py  complexity.py  dead_code.py  dep_audit.py  docstring_audit.py  env_audit.py  git_audit.py  hotspot.py  import_graph.py  naming_check.py  security_scan.py  test_quality.py  todo_scanner.py  type_audit.py
tests/: test_bug_detect.py  test_change_impact.py  test_clone_detect.py  test_complexity.py  test_dead_code.py  test_dep_audit.py  test_docstring_audit.py  test_env_audit.py  test_git_audit.py  test_hotspot.py  test_import_graph.py  test_naming_check.py  test_package.py  test_security_scan.py  test_server.py  test_test_quality.py  test_todo_scanner.py  test_type_audit.py
